# fastapi2.0

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.tf  outputs.tf  providers.tf  pyproject.toml  test.py  variables.tf
src/: .coverage  .dockerignore  .pre-commit-config.yaml  main.py  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 642a9a86906e_create_user_and_blog_table_migrations.py  b5d2b4beea57_create_user_and_blog_table_migrations.py
src/apis/: base.py
src/apis/v1/: route_blog.py  route_login.py  route_user.py  router_blog.py
src/core/: config.py  hashing.py  security.py
src/db/: session.py
src/db/models/: blog.py
src/db/repository/: blog.py  user.py
src/db/schemas/: blog.py  user.py
src/db/services/: blog.py  user.py
src/fast_api_gui_test/: bruno.json
src/tests/: conftest.py
src/tests/test_routes/: test_blog.py  test_user.py
src/tests/utils/: blog.py  user.py
